--- a/week3/andfun-kotlin-sleep-tracker-Step.07-Solution-Add-Button-States-and-SnackBar/build.gradle
+++ b/week3/andfun-kotlin-sleep-tracker-Step.07-Solution-Add-Button-States-and-SnackBar/build.gradle
@@ -19,15 +19,15 @@
 buildscript {
 
     ext {
-        version_core = "1.3.1"
-        version_coroutine = "1.3.7"
-        version_constraint_layout = "2.0.0-rc1"
+        version_core = "1.8.0"
+        version_coroutine = "1.6.4"
+        version_constraint_layout = "2.1.4"
         version_gradle = '7.2.1'
         version_kotlin = "1.7.10"
         version_lifecycle_extensions = "2.2.0"
-        version_lifecycle = "2.2.0"
+        version_lifecycle = "2.5.1"
         version_navigation = '2.5.1'
-        version_room = "2.2.5"
+        version_room = "2.4.3"
     }
 
     repositories {
